--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Souna Meher | Responsable secteur, formateur Centre - Protein SA</title>
+  <title> Responsable secteur, formateur Centre - Protein SA</title>
 </head>
 
 <body>
@@ -26,7 +26,6 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Souna Meher</p>
 					<p class="text-title-company">Responsable secteur, formateur Centre</p>
 					<p class="text-title-company">Protein SA</p>
 				</div>
@@ -35,14 +34,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:idfnord@proteinsa.com">
+		<a href="mailto:centre@proteinsa.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img class="icon" src="assets/icon-email.svg" alt="Email Icon" href="assets/icon-email.svg">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">idfnord@proteinsa.com</p>
+						<p class="text-detail">centre@proteinsa.com</p>
 					</div>
 				</div>
 			</div>
@@ -132,7 +131,7 @@
 				<div class="col"></div>
 				<div class="col is-5">
 					<div class="button">
-						<a href="sm.vcf">
+						<a href="centre.vcf">
 							<p class="button">Téléchargez</p>
 						</a>
 					</div>
